@@ -1,0 +1,58 @@
+/***************************************************************************
+    File                 : AddSubtractDialog.h
+    Project              : LabPlot
+    Description          : Dialog for adding/subtracting a value from column values
+    --------------------------------------------------------------------
+    Copyright            : (C) 2018 by Alexander Semke (alexander.semke@web.de)
+
+ ***************************************************************************/
+
+/***************************************************************************
+ *                                                                         *
+ *  This program is free software; you can redistribute it and/or modify   *
+ *  it under the terms of the GNU General Public License as published by   *
+ *  the Free Software Foundation; either version 2 of the License, or      *
+ *  (at your option) any later version.                                    *
+ *                                                                         *
+ *  This program is distributed in the hope that it will be useful,        *
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of         *
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the          *
+ *  GNU General Public License for more details.                           *
+ *                                                                         *
+ *   You should have received a copy of the GNU General Public License     *
+ *   along with this program; if not, write to the Free Software           *
+ *   Foundation, Inc., 51 Franklin Street, Fifth Floor,                    *
+ *   Boston, MA  02110-1301  USA                                           *
+ *                                                                         *
+ ***************************************************************************/
+#ifndef ADDSUBTRACTVALUEDIALOG_H
+#define ADDSUBTRACTVALUEDIALOG_H
+
+#include "ui_addsubtractvaluewidget.h"
+#include <QDialog>
+
+class Column;
+class Spreadsheet;
+class QPushButton;
+
+class AddSubtractValueDialog : public QDialog {
+Q_OBJECT
+
+public:
+	explicit AddSubtractValueDialog(Spreadsheet* s, bool addValue, QWidget* parent = nullptr);
+	~AddSubtractValueDialog() override;
+	void setColumns(QVector<Column*>);
+
+private:
+	Ui::AddSubtractValueWidget ui;
+	QVector<Column*> m_columns;
+	Spreadsheet* m_spreadsheet;
+	QPushButton* m_okButton;
+	bool m_addValue;
+
+private slots:
+	void generate();
+	void valueChanged();
+};
+
+#endif
