@@ -10,6 +10,7 @@ New features:
 	* Improved user interface for data fitting (add fit function preview, show parameters directly, make options foldable)
 	* [spreadsheet] when filling a float column with row numbers, automatically convert its type to integer
 	* [spreadsheet] when filling an integer column with function values, automatically convert its type to float
+	* [spreadsheet] data manipulation: add/subtract a value from column values
 
 Bug fixes:
 	* Fixed several problems in live data support
